--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,11 +6,12 @@ articles:
   homework: homework.html
   lab01_intro_to_R: lab01_intro_to_R.html
   lab02: lab02.html
+  moment_matching: moment_matching.html
   projects_and_directories: projects_and_directories.html
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2024-12-17T15:58Z
+last_built: 2024-12-29T14:49Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
