--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,6 +4,11 @@ template:
   bootstrap: 5
   bootswatch: spacelab
 
+authors:
+footer:
+roles: [cre, fnd]
+text: "Developed by"
+
 reference:
 
 navbar:
