--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -35,6 +35,8 @@ navbar:
           href: articles/lectures/03_bayes/03_bayes.html
         - text: "Lecture 4: Introduction to Nimble"
           href: articles/lectures/04_intro_nimble/Intro_Nimble.html
+        - text: "Lecture 5: Generalized linear model review"
+          href: articles/lectures/05_glms/05_glms.html
         - text: "Lecture 6: More about priors"
           href: articles/lectures/06_priors/06_priors.html
     - text: "Labs"
@@ -48,6 +50,8 @@ navbar:
           href: articles/Lab2_simulation.html
         - text: "Lab 3: Basic MCMC"
           href: articles/Lab3_BasicMCMC.html
+        - text: "Lab 4: GLMs"
+          href: articles/Lab4_glms.html
         - text: "Lab 5: Priors"
           href: articles/priors.html
     - icon: far fa-bookmark
