--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -39,6 +39,8 @@ navbar:
           href: articles/lectures/05_glms/05_glms.html
         - text: "Lecture 6: More about priors"
           href: articles/lectures/06_priors/06_priors.html
+        - text: "Lecture 7: Random vs. Fixed Effects"
+          href: articles/lectures/07_random_effects/07_random_effects.html
     - text: "Labs"
       icon: fas fa-laptop-code
       menu:
