--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,4 +1,4 @@
-pandoc: 3.1.4
+pandoc: '3.3'
 pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
@@ -15,7 +15,7 @@ articles:
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2025-01-03T19:16Z
+last_built: 2025-01-08T18:35Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
