--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -41,6 +41,9 @@ navbar:
           href: articles/lectures/06_priors/06_priors.html
         - text: "Lecture 7: Random vs. Fixed Effects"
           href: articles/lectures/07_random_effects/07_random_effects.html
+        - text: "Lecture 8: State Space Models"
+          href: articles/lectures/08_occupancy/08_occupancy.html
+          
     - text: "Labs"
       icon: fas fa-laptop-code
       menu:
