--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -9,13 +9,14 @@ articles:
   Lab2_simulation: Lab2_simulation.html
   Lab3_BasicMCMC: Lab3_BasicMCMC.html
   Lab4_glms: Lab4_glms.html
+  Lab6_MissingData: Lab6_MissingData.html
   moment_matching: moment_matching.html
   priors: priors.html
   projects_and_directories: projects_and_directories.html
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2025-01-21T01:49Z
+last_built: 2025-01-23T23:13Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
