--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -11,12 +11,13 @@ articles:
   Lab4_glms: Lab4_glms.html
   Lab6_MissingData: Lab6_MissingData.html
   moment_matching: moment_matching.html
+  NimbleErrors: NimbleErrors.html
   priors: priors.html
   projects_and_directories: projects_and_directories.html
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2025-01-30T19:01Z
+last_built: 2025-01-31T01:12Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
