--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -43,6 +43,8 @@ navbar:
           href: articles/lectures/07_random_effects/07_random_effects.html
         - text: "Lecture 8: State Space Models"
           href: articles/lectures/08_occupancy/08_occupancy.html
+        - text: "Lecture 9: N-Mixture and Occupancy"
+          href: articles/lectures/09_NMix/09_NMix.html
           
     - text: "Labs"
       icon: fas fa-laptop-code
