Fffff but it's working
Secret was adding in template: math-rendering: katex

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,6 +3,7 @@ url: http://rushinglab.github.io/WILD8370
 template:
   bootstrap: 5
   bootswatch: spacelab
+  math-rendering: katex
 
 authors:
 footer:
