--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -48,6 +48,8 @@ navbar:
           href: articles/lectures/09_NMix/09_NMix.html
         - text: "Lecture 10: Dynamic Occupancy Models"
           href: articles/lectures/10_DynamicOcc/10_DynamicOcc.html
+        - text: "Lecture 11: Dynamic N-Mixture Models"
+          href: articles/lectures/11_DynamicNMix/10_DynamicNMix.html
           
     - text: "Labs"
       icon: fas fa-laptop-code
