--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -68,6 +68,8 @@ navbar:
           href: articles/priors.html
         - text: "Lab 6: Missing Data"
           href: articles/Lab6_MissingData.html
+        - text: "Lab 7: Goodness of Fit"
+          href: articles/Lab7_GOF.html
     - icon: far fa-bookmark
       text: "References"
       menu:
