--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -52,7 +52,7 @@ navbar:
           href: articles/lectures/9b_ExtraOcc/9b_ExtraOcc.html
         - text: "Lecture 10: Dynamic Occupancy Models"
           href: articles/lectures/10_DynamicOcc/10_DynamicOcc.html
-        - text: "Lecture 12: Dynamic Occupancy Models"
+        - text: "Lecture 12: Movement Models"
           href: articles/lectures/12_MovementModels/12_MovementModels.html
           
     - text: "Labs"
