--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -11,6 +11,7 @@ articles:
   Lab4_glms: Lab4_glms.html
   Lab6_MissingData: Lab6_MissingData.html
   Lab7_GOF: Lab7_GOF.html
+  Lab8_Movement: Lab8_Movement.html
   moment_matching: moment_matching.html
   NimbleErrors: NimbleErrors.html
   priors: priors.html
@@ -18,7 +19,7 @@ articles:
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2025-03-16T16:52Z
+last_built: 2025-03-16T20:46Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
