--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -12,6 +12,7 @@ articles:
   Lab6_MissingData: Lab6_MissingData.html
   Lab7_GOF: Lab7_GOF.html
   Lab8_Movement: Lab8_Movement.html
+  Lab9_SCR: Lab9_SCR.html
   moment_matching: moment_matching.html
   NimbleErrors: NimbleErrors.html
   priors: priors.html
@@ -19,7 +20,7 @@ articles:
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2025-03-21T16:48Z
+last_built: 2025-03-24T16:42Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
