--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -60,6 +60,8 @@ navbar:
           href: articles/lectures/14_ClosedSCR/Lecture14_ClosedSCR.html
         - text: "Lecture 15: Known Fate Modeling"
           href: articles/lectures/15_KnownFate/15_KnownFate.html
+        - text: "Lecture 16: CJS Models"
+          href: articles/lectures/15_CJS/15_CJS.html
           
     - text: "Labs"
       icon: fas fa-laptop-code
