--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -64,6 +64,8 @@ navbar:
           href: articles/lectures/16_CJS/16_CJS.html
         - text: "Lecture 17: Multistate Models"
           href: articles/lectures/17_Multistate/17_Multistate.html
+        - text: "Lecture 18: Continuous-time CMR"
+          href: articles/lectures/18_CT/18_CT.html
     - text: "Labs"
       icon: fas fa-laptop-code
       menu:
