--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -7,6 +7,7 @@ articles:
   lab01_intro_to_R: lab01_intro_to_R.html
   Lab01b_Mathematical_Notation: Lab01b_Mathematical_Notation.html
   Lab10_CJS: Lab10_CJS.html
+  Lab11_Multistate: Lab11_Multistate.html
   Lab2_simulation: Lab2_simulation.html
   Lab3_BasicMCMC: Lab3_BasicMCMC.html
   Lab4_glms: Lab4_glms.html
@@ -21,7 +22,7 @@ articles:
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2025-04-07T12:56Z
+last_built: 2025-04-09T17:24Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
