--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -68,8 +68,9 @@ navbar:
           href: articles/lectures/18_CT/18_CT.html
         - text: "Lecture 19: Open Capture Mark Recapture Part 1"
           href: articles/lectures/19_JS/19_openCMR.html
-        # - text: "Lecture 20: Open Capture Mark Recapture Part 2"
-        #   href: articles/lectures/20_JSSuper/18_JSSuper.html
+        - text: "Lecture 20: Open Capture Mark Recapture Part 2"
+          href: articles/lectures/20_JSSuper/20_JSSuper.html
+          
     - text: "Labs"
       icon: fas fa-laptop-code
       menu:
