--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -8,6 +8,7 @@ articles:
   Lab01b_Mathematical_Notation: Lab01b_Mathematical_Notation.html
   Lab10_CJS: Lab10_CJS.html
   Lab11_Multistate: Lab11_Multistate.html
+  Lab12_JointLiveDead: Lab12_JointLiveDead.html
   Lab2_simulation: Lab2_simulation.html
   Lab3_BasicMCMC: Lab3_BasicMCMC.html
   Lab4_glms: Lab4_glms.html
@@ -22,7 +23,7 @@ articles:
   RMarkdown: RMarkdown.html
   schedule: schedule.html
   syllabus: syllabus.html
-last_built: 2025-04-15T17:40Z
+last_built: 2025-04-16T01:04Z
 urls:
   reference: http://rushinglab.github.io/WILD8370/reference
   article: http://rushinglab.github.io/WILD8370/articles
