--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -70,6 +70,8 @@ navbar:
           href: articles/lectures/19_JS/19_openCMR.html
         - text: "Lecture 20: Open Capture Mark Recapture Part 2"
           href: articles/lectures/20_JSSuper/20_JSSuper.html
+        - text: "Lecture 21: Multispecies Occupancy"
+          href: articles/lectures/21_MultiOcc/21_MultiOcc.html
           
     - text: "Labs"
       icon: fas fa-laptop-code
